--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
    <html>
+     <head>
+       <title>Gear UP: A Social Gofunding Platform</title>
+       <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+       </head>
    <body style="background-color:yellow;">
-   <title>Gear UP: A Social Gofunding Platform</title>
+
    <h1>Welcome to GEAR UP</h1>
   <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
   new Crate({
@@ -9,5 +13,6 @@
     channel: '1088507063279288384'
   })
 </script>
+<footer>This is the end of page one</footer>
    </body>
    </html>
